login front adjusted

--- a/TiendaGenerica/src/main/resources/templates/customer.html
+++ b/TiendaGenerica/src/main/resources/templates/customer.html
@@ -138,7 +138,7 @@ h1 {
 						<input class="form-control" id="id" >
 						
 					  </div>
-					  <div class="col">
+					  <div class="row">
 						<label class="form-label">Direccion Cliente</label>
 						<input class="form-control" id="direccion">
 					  </div>
