--- a/TiendaGenerica/src/main/resources/templates/index.html
+++ b/TiendaGenerica/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
 <body>
 	<form action="http://localhost:8080/users/auth" method="GET">
 		<h2> Te estábamos esperando!!</h2>
-		<img src="imagenes/Personas_compras.png" alt="compra">
+		<img src="imagenes/Personas_compras.png" width="150" heigth="150" alt="compra">
 		<div>
 		<p> Tienda Genérica</p>
 		<h1>¡BIENVENIDOS! </h1>
@@ -36,7 +36,7 @@
 		<p> Ingresa tu Usuario</p>
 		<p>
 			<label>Usuario</label>
-			<input id="user" type="text" name="usuario" size="20">
+			<input id="user" type="text"name=" usuario" size="20">
 		</p>
 				<p>
 			<label>Contraseña</label>
