--- a/TiendaGenerica/src/main/resources/templates/index.html
+++ b/TiendaGenerica/src/main/resources/templates/index.html
@@ -1,54 +1,111 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>Bienvenidos a Grupo18-Gr7</title>
-	<link rel="stylesheet" href="estilo.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script>
-		function auth(){
-			var user = document.getElementById("user").value
-			var password = document.getElementById("password").value
-			var authRequest = $.ajax({
-				type:"GET",
-				url:"http://localhost:8080/users/auth?userName="+user+"&password="+password,
-				success: function(data){
-					if(data && data.cedulaUsuario){
-						localStorage.setItem("userId", data.cedulaUsuario);
-						window.location = "http://localhost:8080/users"
-					}else{
-						alert("Usuario y/o Password incorrectos")
-					}
-					
-				}
-			})
-		}
-	
-	</script>
-</head>
-<body>
-	<form action="http://localhost:8080/users/auth" method="GET">
-		<h2> Te estábamos esperando!!</h2>
-		<img src="imagenes/Personas_compras.png" width="150" heigth="150" alt="compra">
-		<div>
-		<p> Tienda Genérica</p>
-		<h1>¡BIENVENIDOS! </h1>
-		<p> Estas listo para realizar tus compras?</p>	
-		<p> Ingresa tu Usuario</p>
-		<p>
-			<label>Usuario</label>
-			<input id="user" type="text"name=" usuario" size="20">
-		</p>
-				<p>
-			<label>Contraseña</label>
-			<input id="password" type="password" name="pass" size="15">
-		</p>
-		<p>
-			<input type="button" onclick= "auth()" title="Aceptar" name="Aceptar" value="Aceptar">
-			<input type="reset" title="Cancelar" name="Cancelar" value="Cancelar">
-		</p>
-	    </div>
-	</form>	
+<html style="height: 100%">
+  <head>
+    <meta charset="utf-8" />
+    <title>Bienvenidos a Grupo18-Gr7</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+      crossorigin="anonymous"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script>
+      function auth() {
+        var user = document.getElementById("user").value;
+        var password = document.getElementById("password").value;
+        var authRequest = $.ajax({
+          type: "GET",
+          url:
+            "http://localhost:8080/users/auth?userName=" +
+            user +
+            "&password=" +
+            password,
+          success: function (data) {
+            if (data && data.cedulaUsuario) {
+              localStorage.setItem("userId", data.cedulaUsuario);
+              window.location = "http://localhost:8080/users";
+            } else {
+              alert("Usuario y/o Password incorrectos");
+            }
+          },
+        });
+      }
+    </script>
+  </head>
+  <body style="height: 100%">
+    <div
+      style="
+        width: 100%;
+        height: 100%;
+        background: url('imagenes/background.jpg') no-repeat center center fixed;
+        background-size: cover;
+      "
+    >
+      <form
+        action="http://localhost:8080/users/auth"
+        method="GET"
+        style="
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+		  justify-content: center;
+		  height: 100%;
+        "
+      >
+        <h1>Tienda Genérica!!</h1>
+        <div
+          style="
+            max-width: 400px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+          "
+        >
+          <h3 style="margin-bottom: 50px">¡BIENVENIDOS!</h3>
 
-</body>
+          <div class="grid">
+            <div class="row" style="margin-bottom: 30px;">
+              <div class="col-3">
+                <label for="exampleInputEmail1" class="form-label"
+                  >Usuario</label
+                >
+              </div>
+              <div class="col-9">
+                <input
+                  type="email"
+                  class="form-control"
+                  id="user"
+                  aria-describedby="emailHelp"
+                />
+              </div>
+            </div>
+
+            <div class="row" style="margin-bottom: 30px;">
+              <div class="col-3">
+                <label for="exampleInputPassword1" class="form-label"
+                  >Contraseña</label
+                >
+              </div>
+              <div class="col-9">
+                <input type="password" class="form-control" id="password" />
+              </div>
+            </div>
+          </div>
+
+          <div style="display: flex; align-items: center">
+            <button
+              style="margin-right: 20px"
+              type="button"
+              onclick="auth()"
+              class="btn btn-primary"
+            >
+              ACEPTAR
+            </button>
+            <button type="reset" class="btn btn-primary">CANCELAR</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </body>
 </html>
