--- a/TiendaGenerica/src/main/resources/templates/prov.html
+++ b/TiendaGenerica/src/main/resources/templates/prov.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%;">
 <head>
 	<meta charset="utf-8">
 	<title>Bienvenidos a Grupo18-Gr7</title>
@@ -83,14 +83,16 @@
 	
 	</script>
 </head>
-<body>
-	<div class="h2" style="justify-content: center; display: flex; margin-top: 20px;">
-<<<<<<< HEAD
-		Proveedores
-=======
-		TIENDA GENERICA GRUPO 7
->>>>>>> b721d13516ec110f52c61cdb5051a7cc3f8a92e9
-	</div>
+<body style="height: 100%;">
+	<div
+      style="
+        width: 100%;
+        height: 100%;
+        background: url('imagenes/background.jpg') no-repeat center center fixed;
+        background-size: cover;
+		padding-top: 20PX;
+      "
+    >
 	<div style="display: flex; justify-content: center; margin-bottom: 50px;">
 		<div style="max-width: 1000px; width: 100%; padding: 0 40px;">
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -99,6 +101,10 @@
 				  <span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNav">
+					<div class="navbar-brand">
+						TIENDA GENÉRICA GRUPO 7
+		
+					  </div>
 				  <ul class="navbar-nav">
 					<li class="nav-item">
 					  <a class="nav-link" href="/users">Usuarios</a>
