--- a/TiendaGenerica/src/main/resources/templates/sales.html
+++ b/TiendaGenerica/src/main/resources/templates/sales.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%;">
   <head>
     <meta charset="utf-8" />
     <title>Bienvenidos a Grupo18-Gr7</title>
@@ -147,16 +147,22 @@
       }
     </script>
   </head>
-  <body>
+  <body style="height: 100%;">
     <div
-      class="h2"
-      style="justify-content: center; display: flex; margin-top: 20px"
+      style="
+        width: 100%;
+        height: 100%;
+        background: url('imagenes/background.jpg') no-repeat center center fixed;
+        background-size: cover;
+        padding-top: 20PX;
+      "
     >
-      TIENDA GENERICA GRUPO 7
-    </div>
-    <div style="display: flex; justify-content: center; margin-bottom: 50px">
+    
+    <div style="display: flex; justify-content: center; margin-bottom: 50px;">
       <div style="max-width: 1000px; width: 100%; padding: 0 40px">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" 
+        
+        >
           <div class="container-fluid">
             <button
               class="navbar-toggler"
@@ -170,6 +176,10 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
+              <div class="navbar-brand">
+                TIENDA GENÉRICA GRUPO 7
+
+              </div>
               <ul class="navbar-nav">
                 <li class="nav-item">
                   <a class="nav-link" href="/users">Usuarios</a>
@@ -393,7 +403,7 @@
               </div>
             </div>
           </div>
-          <div style="margin-top: 50px; display: flex; justify-content: center">
+          <div style="margin-top: 30px; display: flex; justify-content: center">
             <button
               style="margin: 0 10px"
               type="button"
