--- a/TiendaGenerica/src/main/resources/templates/prov.html
+++ b/TiendaGenerica/src/main/resources/templates/prov.html
@@ -122,7 +122,7 @@
 					  <a class="nav-link" href="/sales">Ventas</a>
 					</li>
 					<li class="nav-item">
-					  <a class="nav-link" href="/repors">Reportes</a>
+					  <a class="nav-link" href="/reports">Reportes</a>
 					</li>
 				  </ul>
 				</div>
