--- a/TiendaGenerica/src/main/resources/templates/customer.html
+++ b/TiendaGenerica/src/main/resources/templates/customer.html
@@ -133,7 +133,7 @@ h1 {
 					  <a class="nav-link" href="/sales">Ventas</a>
 					</li>
 					<li class="nav-item">
-					  <a class="nav-link" href="/repors">Reportes</a>
+					  <a class="nav-link" href="/reports">Reportes</a>
 					</li>
 				  </ul>
 				</div>
