--- a/TiendaGenerica/src/main/resources/templates/sales.html
+++ b/TiendaGenerica/src/main/resources/templates/sales.html
@@ -199,7 +199,7 @@
                   <a class="nav-link active" href="/sales">Ventas</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/repors">Reportes</a>
+                  <a class="nav-link" href="/reports">Reportes</a>
                 </li>
               </ul>
             </div>
