--- a/TiendaGenerica/src/main/resources/templates/reports.html
+++ b/TiendaGenerica/src/main/resources/templates/reports.html
@@ -1,10 +1,71 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+	<meta charset="utf-8">
+	<title>Bienvenidos a Grupo18-Gr7 - Reportes</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
-<body>
+<body style="height: 100%;">
+	<div
+      style="
+        width: 100%;
+        height: 100%;
+        background: url('imagenes/background.jpg') no-repeat center center fixed;
+        background-size: cover;
+		padding-top: 20PX;
+      "
+    >
+	<div style="display: flex; justify-content: center; margin-bottom: 50px;">
+		<div style="max-width: 1000px; width: 100%; padding: 0 40px;">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<div class="container-fluid">
+			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			  </button>
+			  <div class="collapse navbar-collapse" id="navbarNav">
+				<div class="navbar-brand">
+					TIENDA GENÉRICA GRUPO 7
+	
+				  </div>
+				<ul class="navbar-nav">
+				  <li class="nav-item">
+					<a class="nav-link" href="/users">Usuarios</a>
+				  </li>	
+				  <li class="nav-item">
+					<a class="nav-link"  href="/customers">Clientes</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="/providers">Proveedores</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="/products">Productos</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="/sales">Ventas</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="/reports">Reportes</a>
+				  </li>
+				</ul>
+			  </div>
+			</div>
+		  </nav>
+	</div>
+	</div>
+	
+	<div class="d-grid gap-2 col-6 mx-auto">
+		<button class="btn btn-primary" type="button">Listado de Usuarios</button>
+  		<button class="btn btn-primary" type="button">Listado de Clientes</button>
+  		<button class="btn btn-primary" type="button">Ventas por Clientes</button>
+	</div>
+	
+	</div>
+	
+
+	</div>
+
+
 
 </body>
 </html>
