--- a/TiendaGenerica/src/main/resources/templates/reports.html
+++ b/TiendaGenerica/src/main/resources/templates/reports.html
@@ -17,17 +17,16 @@
       "
     >
 	<div style="display: flex; justify-content: center; margin-bottom: 50px;">
-		<div style="max-width: 1000px; width: 100%; padding: 0 40px;">
+	<div style="max-width: 1000px; width: 100%; padding: 0 40px;">
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container-fluid">
-			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			  </button>
-			  <div class="collapse navbar-collapse" id="navbarNav">
-				<div class="navbar-brand">
-					TIENDA GENÉRICA GRUPO 7
-	
-				  </div>
+		  		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+			  	</button>
+		  	<div class="collapse navbar-collapse" id="navbarNav">
+			<div class="navbar-brand">
+					TIENDA GENÉRICA GRUPO 7	
+ 			</div>
 				<ul class="navbar-nav">
 				  <li class="nav-item">
 					<a class="nav-link" href="/users">Usuarios</a>
@@ -48,24 +47,26 @@
 					<a class="nav-link active" aria-current="page" href="/reports">Reportes</a>
 				  </li>
 				</ul>
-			  </div>
+		  	</div>
 			</div>
-		  </nav>
+		</nav>
 	</div>
 	</div>
 	
+	<form>
 	<div class="d-grid gap-2 col-6 mx-auto">
+		<form action="users.html" method="post">
 		<button class="btn btn-primary" type="button">Listado de Usuarios</button>
+		</form>
   		<button class="btn btn-primary" type="button">Listado de Clientes</button>
   		<button class="btn btn-primary" type="button">Ventas por Clientes</button>
 	</div>
+	</form>
+	
+	
 	
 	</div>
 	
-
-	</div>
-
-
 
 </body>
 </html>
