--- a/TiendaGenerica/src/main/resources/templates/reports.html
+++ b/TiendaGenerica/src/main/resources/templates/reports.html
@@ -55,9 +55,9 @@
 	
 	<form>
 	<div class="d-grid gap-2 col-6 mx-auto">
-		<form action="users.html" method="post">
-		<button class="btn btn-primary" type="button">Listado de Usuarios</button>
-		</form>
+		
+		<button class="btn btn-primary" type="button" action="users.html" method="post">Listado de Usuarios</button>
+		
   		<button class="btn btn-primary" type="button">Listado de Clientes</button>
   		<button class="btn btn-primary" type="button">Ventas por Clientes</button>
 	</div>
