--- a/TiendaGenerica/src/main/resources/templates/reports/userslist.html
+++ b/TiendaGenerica/src/main/resources/templates/reports/userslist.html
@@ -14,7 +14,32 @@ h1 {
 	<title>Bienvenidos a Grupo18-Gr7</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
+	<script>
+		function getFile(){
+			document.getElementById("fileSource").focus
+		}
+		function save(){
+			var id = document.getElementById("id").value
+			var direccion = document.getElementById("direccion").value
+			var email = document.getElementById("email").value
+			var nombre = document.getElementById("nombre").value
+			var telefono = document.getElementById("telefono").value
+			
+			var authRequest = $.ajax({
+				type:"GET",
+				url:"http://localhost:8080/customer/create?cedulaCliente="+id+"&direccionCliente="+direccion+"&emailCliente="+email+"&nombreCliente="+nombre+"&telefonoCliente="+telefono,
+				success: function(data){
+					if(data == true){
+						alert("Cliente creado correctamente")
+					}else{
+						alert("Cliente no creado")
+					}
+					
+				}
+			})
+		}
+		
+	</script>
 </head>
 <body style="height: 100%;">
 	<div
@@ -64,14 +89,9 @@ h1 {
 		  </nav>
 	</div>
 	</div>
-	
-	<form>
-	<div class="d-grid gap-2 col-6 mx-auto">
-		<a href="reports/userslist" class="btn btn-primary" type="button">Listado de Usuarios</a>
-		<a href="reports/customerslist" class="btn btn-primary" type="button">Listado de Clientes</a>
-		<a href="reports/saleslist" class="btn btn-primary" type="button">Ventas por Clientes</a>
 	</div>
-	</form>
+
+
 	
 </body>
 </html>
