--- a/TiendaGenerica/src/main/resources/templates/reports/customerslist.html
+++ b/TiendaGenerica/src/main/resources/templates/reports/customerslist.html
@@ -14,6 +14,40 @@ h1 {
 	<title>Bienvenidos a Grupo18-Gr7</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	
+	<script>
+	var costumers = $.ajax({
+		type: "GET",
+		url: "http://localhost:8080/customer/list",
+		success: function(data){
+			$.each(data, function(i, item){
+				lista = document.getElementById("myTable");
+				var tr = document.createElement("tr");			
+				var columna1 = document.createElement("td")
+				columna1.innerHTML = item.cedulaCliente;
+				var columna2 = document.createElement("td");
+				columna2.innerHTML = item.direccionCliente;
+				var columna3 = document.createElement("td");
+				columna3.innerHTML = item.emailCliente;
+				var columna4 = document.createElement("td");
+				columna4.innerHTML = item.nombreCliente;
+				var columna5 = document.createElement("td");
+				columna5.innerHTML = item.telefonoCliente;
+				
+				lista.appendChild(tr);
+				tr.appendChild(columna1);
+				tr.appendChild(columna2);
+				tr.appendChild(columna3);
+				tr.appendChild(columna4);
+				tr.appendChild(columna5);
+				
+			})
+			
+		}
+	})
+	
+	
+	</script>
 
 </head>
 <body style="height: 100%;">
@@ -64,6 +98,35 @@ h1 {
 		  </nav>
 	</div>
 	</div>
+	
+<div>
+	<style>
+	table, th, tr, td, thead{
+	border: 1px solid black;
+	border-collapse: collapse;
+	padding: 5px;
+	justify-content: center;
+	
+	}
+	.tableFormat table {
+		margin: 0 40px;
+	
+	}
+	</style>
+	<table style="width: 50%">
+		<thead>
+			<tr>
+				<th>Cedula Cliente</th>
+				<th>Direccion</th>
+				<th>Email Cliente</th>
+				<th>Nombre Cliente</th>
+				<th>Telefono Cliente</th>
+			</tr>
+		</thead>
+		<tbody id = "myTable">
+		</tbody>
+	</table>
+</div>
 	
 
 	
