--- a/TiendaGenerica/src/main/resources/templates/reports/saleslist.html
+++ b/TiendaGenerica/src/main/resources/templates/reports/saleslist.html
@@ -15,6 +15,45 @@ h1 {
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
+<script>
+	var users = $.ajax({
+		type: "GET",
+		url: "http://localhost:8080/users/list",
+		success: function(data){
+			$.each(data, function(i, item){
+				lista = document.getElementById("myTable");
+				var tr = document.createElement("tr");			
+				var columna1 = document.createElement("td")
+				columna1.innerHTML = item.codigoVenta;
+				var columna2 = document.createElement("td");
+				columna2.innerHTML = item.cedulaCliente;
+				var columna3 = document.createElement("td");
+				columna3.innerHTML = item.cedulaUsuario;
+				var columna4 = document.createElement("td");
+				columna4.innerHTML = item.ivaVenta;
+				var columna5 = document.createElement("td");
+				columna5.innerHTML = item.totalVenta;
+				var columna6 = document.createElement("td");
+				columna6.innerHTML = item.detailSale;
+				var columna7 = document.createElement("td");
+				columna7.innerHTML = item.valorVenta;
+				
+				lista.appendChild(tr);
+				tr.appendChild(columna1);
+				tr.appendChild(columna2);
+				tr.appendChild(columna3);
+				tr.appendChild(columna4);
+				tr.appendChild(columna5);
+				tr.appendChild(columna6);
+				tr.appendChild(columna7);
+			})
+			
+		}
+	})
+	
+	
+</script>
+
 </head>
 <body style="height: 100%;">
 	<div
@@ -62,6 +101,34 @@ h1 {
 				</div>
 			  </div>
 		  </nav>
+		  <style>
+	table, th, tr, td, thead{
+	border: 1px solid black;
+	border-collapse: collapse;
+	padding: 5px;
+	justify-content: center;
+	
+	}
+	.tableFormat table {
+		margin: 0 40px;
+	
+	}
+	</style>
+	<table style="width: 50%">
+		<thead>
+			<tr>
+				<th>Codigo Venta</th>
+				<th>Cedula Cliente</th>
+				<th>Cedula Usuario</th>
+				<th>Iva Venta</th>
+				<th>Total Venta</th>
+				<th>Detalle Venta</th>
+				<th>Valor Venta</th>
+			</tr>
+		</thead>
+		<tbody id = "myTable">
+		</tbody>
+	</table>
 	</div>
 	</div>
 	
