--- a/TiendaGenerica/src/main/resources/templates/reports/userslist.html
+++ b/TiendaGenerica/src/main/resources/templates/reports/userslist.html
@@ -14,32 +14,40 @@ h1 {
 	<title>Bienvenidos a Grupo18-Gr7</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script>
-		function getFile(){
-			document.getElementById("fileSource").focus
-		}
-		function save(){
-			var id = document.getElementById("id").value
-			var direccion = document.getElementById("direccion").value
-			var email = document.getElementById("email").value
-			var nombre = document.getElementById("nombre").value
-			var telefono = document.getElementById("telefono").value
-			
-			var authRequest = $.ajax({
-				type:"GET",
-				url:"http://localhost:8080/customer/create?cedulaCliente="+id+"&direccionCliente="+direccion+"&emailCliente="+email+"&nombreCliente="+nombre+"&telefonoCliente="+telefono,
-				success: function(data){
-					if(data == true){
-						alert("Cliente creado correctamente")
-					}else{
-						alert("Cliente no creado")
-					}
-					
-				}
+
+<script>
+	var users = $.ajax({
+		type: "GET",
+		url: "http://localhost:8080/users/list",
+		success: function(data){
+			$.each(data, function(i, item){
+				lista = document.getElementById("myTable");
+				var tr = document.createElement("tr");			
+				var columna1 = document.createElement("td")
+				columna1.innerHTML = item.cedulaUsuario;
+				var columna2 = document.createElement("td");
+				columna2.innerHTML = item.emailUsuario;
+				var columna3 = document.createElement("td");
+				columna3.innerHTML = item.nombreUsuario;
+				var columna4 = document.createElement("td");
+				columna4.innerHTML = item.password;
+				var columna5 = document.createElement("td");
+				columna5.innerHTML = item.usuario;
+				
+				lista.appendChild(tr);
+				tr.appendChild(columna1);
+				tr.appendChild(columna2);
+				tr.appendChild(columna3);
+				tr.appendChild(columna4);
+				tr.appendChild(columna5);
+				
 			})
+			
 		}
-		
-	</script>
+	})
+	
+	
+</script>
 </head>
 <body style="height: 100%;">
 	<div
@@ -84,13 +92,44 @@ h1 {
 					  <a class="nav-link active" href="/reports">Reportes</a>
 					</li>
 				  </ul>
-				</div>
+				 </div>
 			  </div>
 		  </nav>
+		  <style>
+		table, th, tr, td, thead{
+		border: 1px solid black;
+		border-collapse: collapse;
+		padding: 5px;
+		justify-content: center;
+		
+		}
+		.tableFormat table {
+			margin: 0 40px;
+		
+		}
+	</style>
+		   <table style="width: 50%">
+		
+			<thead>
+				<tr>
+					<th>Cedula</th>
+					<th>Email</th>
+					<th>Nombre</th>
+					<th>Password</th>
+					<th>Usuario</th>
+				</tr>
+			</thead>
+			<tbody id = "myTable">
+			</tbody>
+		</table>
 	</div>
 	</div>
 	</div>
-
+	
+	<div>
+		
+		
+	</div>
 
 	
 </body>
