--- a/TiendaGenerica/src/main/resources/templates/reports/customerslist.html
+++ b/TiendaGenerica/src/main/resources/templates/reports/customerslist.html
@@ -26,11 +26,11 @@ h1 {
 				var columna1 = document.createElement("td")
 				columna1.innerHTML = item.cedulaCliente;
 				var columna2 = document.createElement("td");
-				columna2.innerHTML = item.direccionCliente;
+				columna2.innerHTML = item.nombreCliente;
 				var columna3 = document.createElement("td");
 				columna3.innerHTML = item.emailCliente;
 				var columna4 = document.createElement("td");
-				columna4.innerHTML = item.nombreCliente;
+				columna4.innerHTML = item.direccionCliente;
 				var columna5 = document.createElement("td");
 				columna5.innerHTML = item.telefonoCliente;
 				
@@ -55,7 +55,7 @@ h1 {
       style="
         width: 100%;
         height: 100%;
-        background: url('imagenes/background.jpg') no-repeat center center fixed;
+        background: url('../imagenes/background.jpg') no-repeat center center fixed;
         background-size: cover;
 		padding-top: 20PX;
       "
@@ -96,27 +96,16 @@ h1 {
 				</div>
 			  </div>
 		  </nav>
-		  <style>
-	table, th, tr, td, thead{
-	border: 1px solid black;
-	border-collapse: collapse;
-	padding: 5px;
-	justify-content: center;
-	
-	}
-	.tableFormat table {
-		margin: 0 40px;
-	
-	}
-	</style>
-	<table style="width: 50%">
-		<thead>
-			<tr>
-				<th>Cedula Cliente</th>
-				<th>Direccion</th>
-				<th>Email Cliente</th>
-				<th>Nombre Cliente</th>
-				<th>Telefono Cliente</th>
+		  <h3 style="align-items: center; justify-content: center; display: flex; margin-top: 30px;">Listado de Usuarios</h3>
+
+	<table class="table" style="margin-top: 50px;">
+		<thead class="table"></thead>
+			<tr class= "bg-primary" style="color: white;"> 
+				<th>Cedula</th>
+				<th>Nombre</th>
+				<th>Correo Electrónico</th>
+				<th>Dirección</th>
+				<th>Teléfono</th>
 			</tr>
 		</thead>
 		<tbody id = "myTable">
