--- a/TiendaGenerica/src/main/resources/templates/reports/saleslist.html
+++ b/TiendaGenerica/src/main/resources/templates/reports/saleslist.html
@@ -18,35 +18,29 @@ h1 {
 <script>
 	var users = $.ajax({
 		type: "GET",
-		url: "http://localhost:8080/users/list",
+		url: "http://localhost:8080/sales/list",
 		success: function(data){
 			$.each(data, function(i, item){
 				lista = document.getElementById("myTable");
-				var tr = document.createElement("tr");			
-				var columna1 = document.createElement("td")
-				columna1.innerHTML = item.codigoVenta;
+				var tr = document.createElement("tr");	
+				var columna1 = document.createElement("td");
+				columna1.innerHTML = item.cedulaCliente;
 				var columna2 = document.createElement("td");
-				columna2.innerHTML = item.cedulaCliente;
+				columna2.innerHTML = item.nombreCliente;
 				var columna3 = document.createElement("td");
-				columna3.innerHTML = item.cedulaUsuario;
-				var columna4 = document.createElement("td");
-				columna4.innerHTML = item.ivaVenta;
-				var columna5 = document.createElement("td");
-				columna5.innerHTML = item.totalVenta;
-				var columna6 = document.createElement("td");
-				columna6.innerHTML = item.detailSale;
-				var columna7 = document.createElement("td");
-				columna7.innerHTML = item.valorVenta;
-				
+				columna3.innerHTML = item.totalVenta;
+
 				lista.appendChild(tr);
 				tr.appendChild(columna1);
 				tr.appendChild(columna2);
 				tr.appendChild(columna3);
-				tr.appendChild(columna4);
-				tr.appendChild(columna5);
-				tr.appendChild(columna6);
-				tr.appendChild(columna7);
 			})
+
+			var sum = data.reduce((before, current)=>{
+					return before + current.totalVenta;
+			},0)
+
+			document.getElementById("totalSale").value = sum;
 			
 		}
 	})
@@ -60,7 +54,7 @@ h1 {
       style="
         width: 100%;
         height: 100%;
-        background: url('imagenes/background.jpg') no-repeat center center fixed;
+        background: url('../imagenes/background.jpg') no-repeat center center fixed;
         background-size: cover;
 		padding-top: 20PX;
       "
@@ -101,34 +95,31 @@ h1 {
 				</div>
 			  </div>
 		  </nav>
-		  <style>
-	table, th, tr, td, thead{
-	border: 1px solid black;
-	border-collapse: collapse;
-	padding: 5px;
-	justify-content: center;
-	
-	}
-	.tableFormat table {
-		margin: 0 40px;
-	
-	}
-	</style>
-	<table style="width: 50%">
-		<thead>
-			<tr>
-				<th>Codigo Venta</th>
-				<th>Cedula Cliente</th>
-				<th>Cedula Usuario</th>
-				<th>Iva Venta</th>
-				<th>Total Venta</th>
-				<th>Detalle Venta</th>
-				<th>Valor Venta</th>
+		  <h3 style="align-items: center; justify-content: center; display: flex; margin-top: 30px;">
+			Total de Ventas por Cliente</h3>
+		  <table class="table" style="margin-top: 50px;">
+		<thead class="table">
+			<tr class= "bg-primary" style="color: white;"> 
+				<th>Cedula</th>
+				<th>Nombre</th>
+				<th>Valor Total Ventas</th>
 			</tr>
 		</thead>
 		<tbody id = "myTable">
 		</tbody>
 	</table>
+	
+	<div class="row">
+		<div class="col-4"></div>
+		<div class="col-3" style="text-align: right;">
+			<b>
+				Total Ventas $
+			</b>
+			</div>
+		<div class="col-5">
+		  <input class="bg-primary" style="color: white; width: 100%; border: none;" id="totalSale" disabled />
+		</div>
+	  </div>
 	</div>
 	</div>
 	
