--- a/TiendaGenerica/src/main/resources/templates/reports/userslist.html
+++ b/TiendaGenerica/src/main/resources/templates/reports/userslist.html
@@ -1,136 +1,122 @@
 <!DOCTYPE html>
-<html style="height: 100%;">
-<head>
-<style>
-body {
-    background-color: #93B874;
-}
-h1 {
-    background-color: #00b33c;
-}
+<html style="height: 100%">
+  <head>
+    <style>
+      body {
+        background-color: #93b874;
+      }
+      h1 {
+        background-color: #00b33c;
+      }
+    </style>
+    <meta charset="utf-8" />
+    <title>Bienvenidos a Grupo18-Gr7</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+      crossorigin="anonymous"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-</style>
-	<meta charset="utf-8">
-	<title>Bienvenidos a Grupo18-Gr7</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script>
+      var users = $.ajax({
+        type: "GET",
+        url: "http://localhost:8080/users/list",
+        success: function (data) {
+          $.each(data, function (i, item) {
+            lista = document.getElementById("myTable");
+            var tr = document.createElement("tr");
+            var columna1 = document.createElement("td");
+            columna1.innerHTML = item.cedulaUsuario;
+            var columna2 = document.createElement("td");
+            columna2.innerHTML = item.nombreUsuario;
+            var columna3 = document.createElement("td");
+            columna3.innerHTML = item.emailUsuario;
+            var columna4 = document.createElement("td");
+            columna4.innerHTML = item.usuario;
+            var columna5 = document.createElement("td");
+            columna5.innerHTML = item.password;
 
-<script>
-	var users = $.ajax({
-		type: "GET",
-		url: "http://localhost:8080/users/list",
-		success: function(data){
-			$.each(data, function(i, item){
-				lista = document.getElementById("myTable");
-				var tr = document.createElement("tr");			
-				var columna1 = document.createElement("td")
-				columna1.innerHTML = item.cedulaUsuario;
-				var columna2 = document.createElement("td");
-				columna2.innerHTML = item.emailUsuario;
-				var columna3 = document.createElement("td");
-				columna3.innerHTML = item.nombreUsuario;
-				var columna4 = document.createElement("td");
-				columna4.innerHTML = item.password;
-				var columna5 = document.createElement("td");
-				columna5.innerHTML = item.usuario;
-				
-				lista.appendChild(tr);
-				tr.appendChild(columna1);
-				tr.appendChild(columna2);
-				tr.appendChild(columna3);
-				tr.appendChild(columna4);
-				tr.appendChild(columna5);
-				
-			})
-			
-		}
-	})
-	
-	
-</script>
-</head>
-<body style="height: 100%;">
-	<div
+            lista.appendChild(tr);
+            tr.appendChild(columna1);
+            tr.appendChild(columna2);
+            tr.appendChild(columna3);
+            tr.appendChild(columna4);
+            tr.appendChild(columna5);
+          });
+        },
+      });
+    </script>
+  </head>
+  <body style="height: 100%">
+    <div
       style="
         width: 100%;
         height: 100%;
-        background: url('imagenes/background.jpg') no-repeat center center fixed;
+        background: url('../imagenes/background.jpg') no-repeat center center
+          fixed;
         background-size: cover;
-		padding-top: 20PX;
+        padding-top: 20px;
       "
     >
-	
-	<div style="display: flex; justify-content: center; margin-bottom: 50px;">
-		<div style="max-width: 1000px; width: 100%; padding: 0 40px;">
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<div class="container-fluid">
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				  <span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
-					<div class="navbar-brand">
-						TIENDA GENÉRICA GRUPO 7
-		
-					  </div>
-				  <ul class="navbar-nav">
-					<li class="nav-item">
-					  <a class="nav-link" href="/users">Usuarios</a>
-					</li>	
-					<li class="nav-item">
-					  <a class="nav-link" aria-current="page" href="/customers">Clientes</a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="/providers">Proveedores</a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="/products">Productos</a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="/sales">Ventas</a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link active" href="/reports">Reportes</a>
-					</li>
-				  </ul>
-				 </div>
-			  </div>
-		  </nav>
-		  <style>
-		table, th, tr, td, thead{
-		border: 1px solid black;
-		border-collapse: collapse;
-		padding: 5px;
-		justify-content: center;
-		
-		}
-		.tableFormat table {
-			margin: 0 40px;
-		
-		}
-	</style>
-		   <table style="width: 50%">
-		
-			<thead>
-				<tr>
-					<th>Cedula</th>
-					<th>Email</th>
-					<th>Nombre</th>
-					<th>Password</th>
-					<th>Usuario</th>
-				</tr>
-			</thead>
-			<tbody id = "myTable">
-			</tbody>
-		</table>
-	</div>
-	</div>
-	</div>
-	
-	<div>
-		
-		
-	</div>
-
-	
-</body>
+      <div style="display: flex; justify-content: center; margin-bottom: 50px">
+        <div style="max-width: 1000px; width: 100%; padding: 0 40px">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNav"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="navbar-brand">TIENDA GENÉRICA GRUPO 7</div>
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="/users">Usuarios</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/customers"
+                      >Clientes</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/providers">Proveedores</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/products">Productos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/sales">Ventas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="/reports">Reportes</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+		  <h3 style="align-items: center; justify-content: center; display: flex; margin-top: 30px;">Listado de Usuarios</h3>
+          <table class="table" style="margin-top: 50px;">
+            <thead class="table">
+              <tr class= "bg-primary" style="color: white;"> 
+                <th>Cedula</th>
+                <th>Nombre</th>
+                <th>Correo Electrónico</th>
+                <th>Usuario</th>
+                <th>Password</th>
+              </tr>
+            </thead>
+            <tbody id="myTable"></tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
