--- a/TiendaGenerica/src/main/resources/templates/products.html
+++ b/TiendaGenerica/src/main/resources/templates/products.html
@@ -1,117 +1,118 @@
 <!DOCTYPE html>
 <html style="height: 100%;">
-<head>
-<style>
-body {
-    background-color: #93B874;
-}
-h1 {
-    background-color: #00b33c;
-}
-
-</style>
-	<meta charset="utf-8">
-	<title>Bienvenidos a Grupo18-Gr7</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script>
-		function getFile(){
-			document.getElementById("fileSource").focus
-		}
-		function save(){
-			var id = document.getElementById("id").value
-			var direccion = document.getElementById("direccion").value
-			var email = document.getElementById("email").value
-			var nombre = document.getElementById("nombre").value
-			var telefono = document.getElementById("telefono").value
-			
-			var authRequest = $.ajax({
-				type:"GET",
-				url:"http://localhost:8080/customer/create?cedulaCliente="+id+"&direccionCliente="+direccion+"&emailCliente="+email+"&nombreCliente="+nombre+"&telefonoCliente="+telefono,
-				success: function(data){
-					if(data == true){
-						alert("Cliente creado correctamente")
-					}else{
-						alert("Cliente no creado")
-					}
-					
-				}
-			})
-		}
-		
-	</script>
-</head>
-<body style="height: 100%;">
-	<div
-      style="
-        width: 100%;
-        height: 100%;
-        background: url('imagenes/background.jpg') no-repeat center center fixed;
-        background-size: cover;
-		padding-top: 20PX;
-      "
-    >
-	
-	<div style="display: flex; justify-content: center; margin-bottom: 50px;">
-		<div style="max-width: 1000px; width: 100%; padding: 0 40px;">
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<div class="container-fluid">
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				  <span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
-					<div class="navbar-brand">
-						TIENDA GENÉRICA GRUPO 7
-		
-					  </div>
-				  <ul class="navbar-nav">
-					<li class="nav-item">
-					  <a class="nav-link" href="/users">Usuarios</a>
-					</li>	
-					<li class="nav-item">
-					  <a class="nav-link" aria-current="page" href="/customers">Clientes</a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="/providers">Proveedores</a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link active" href="/products">Productos</a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="/sales">Ventas</a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="/reports">Reportes</a>
-					</li>
-				  </ul>
-				</div>
-			  </div>
-		  </nav>
-	</div>
-	</div>
-	
-	<form>
-		<div style="display: flex; justify-content: center; flex-direction: column; align-items: center;">
-			<div style="max-width: 1000px; width: 100%; padding: 0 40px;">
-				<div class="row">
-					<div class="col">
-						<label class="form-label">Nombre del Archivo</label>
-						<input class="form-control" id="fileSource" type="file">
-						
-					  </div>
-					  <div style="display: flex;" class="col">
-						  <button style="margin-top: auto;" class="btn btn-primary" onclick="getFile()">EXAMINAR</button>
-						
-					  </div>
-				</div>
-					<div style="margin-top: 50px; display: flex; justify-content: center;">
-					<button style="margin:0 10px" type="button" class="btn btn-primary" onclick="save()">Cargar</button>
-					</div>
-	
-			  </div>
-		</div>
-			  
-	</form>
-	
-</body>
+   <head>
+      <style>
+         body {
+         background-color: #93B874;
+         }
+         h1 {
+         background-color: #00b33c;
+         }
+      </style>
+      <meta charset="utf-8">
+      <title>Bienvenidos a Grupo18-Gr7</title>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/0.71/jquery.csv-0.71.min.js"></script>
+      <script>
+         function getFile(){
+         	document.getElementById("fileSource").click();
+         }
+         function save(){
+         	var file = document.getElementById("fileSource").files[0];
+         	console.log(file);
+         	var fr=new FileReader();
+            fr.onload=function(){
+         	var productsData = $.csv.toObjects(fr.result)
+         
+         	var getUrl = window.location;
+            var baseUrl = getUrl.protocol + "//" + getUrl.host + "/";
+         	$.ajax({
+         	contentType: 'application/json',
+         	data: JSON.stringify(productsData), 
+         	dataType: 'json',
+         	success: function(data){
+         	if (data ) {
+         		alert("Productos Cargados")
+         	} else {
+         		alert("No se pudo guardar los productos");
+         	};
+         	},
+         	error: function(){
+         		app.log("No se pudo guardar los productos");
+         	},
+         	processData: false,
+         	type: 'POST',
+         	url: baseUrl+"products/load"
+         });
+         console.log(data);
+         }
+         fr.readAsText(file);
+         
+         }
+         
+      </script>
+   </head>
+   <body style="height: 100%;">
+      <div
+         style="
+         width: 100%;
+         height: 100%;
+         background: url('imagenes/background.jpg') no-repeat center center fixed;
+         background-size: cover;
+         padding-top: 20PX;
+         "
+         >
+      <div style="display: flex; justify-content: center; margin-bottom: 50px;">
+         <div style="max-width: 1000px; width: 100%; padding: 0 40px;">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+               <div class="container-fluid">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                     <div class="navbar-brand">
+                        TIENDA GENÉRICA GRUPO 7
+                     </div>
+                     <ul class="navbar-nav">
+                        <li class="nav-item">
+                           <a class="nav-link" href="/users">Usuarios</a>
+                        </li>
+                        <li class="nav-item">
+                           <a class="nav-link" aria-current="page" href="/customers">Clientes</a>
+                        </li>
+                        <li class="nav-item">
+                           <a class="nav-link" href="/providers">Proveedores</a>
+                        </li>
+                        <li class="nav-item">
+                           <a class="nav-link active" href="/products">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                           <a class="nav-link" href="/sales">Ventas</a>
+                        </li>
+                        <li class="nav-item">
+                           <a class="nav-link" href="/reports">Reportes</a>
+                        </li>
+                     </ul>
+                  </div>
+               </div>
+            </nav>
+         </div>
+      </div>
+      <form>
+         <div style="display: flex; justify-content: center; flex-direction: column; align-items: center;">
+            <div style="max-width: 1000px; width: 100%; padding: 0 40px;">
+               <div class="row">
+                  <div class="col">
+                     <label class="form-label">Nombre del Archivo</label>
+                     <input class="form-control" id="fileSource" type="file">
+                  </div>
+               </div>
+               <div style="margin-top: 50px; display: flex; justify-content: center;">
+                  <button style="margin:0 10px" type="button" class="btn btn-primary" onclick="save()">Cargar</button>
+               </div>
+            </div>
+         </div>
+      </form>
+   </body>
 </html>
