--- a/TiendaGenerica/src/main/resources/templates/reports/saleslist.html
+++ b/TiendaGenerica/src/main/resources/templates/reports/saleslist.html
@@ -16,9 +16,11 @@ h1 {
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 <script>
+	var getUrl = window.location;
+    var baseUrl = getUrl.protocol + "//" + getUrl.host + "/";
 	var users = $.ajax({
 		type: "GET",
-		url: "http://localhost:8080/sales/list",
+		url:baseUrl+ "sales/list",
 		success: function(data){
 			$.each(data, function(i, item){
 				lista = document.getElementById("myTable");
