--- a/TiendaGenerica/src/main/resources/templates/reports/userslist.html
+++ b/TiendaGenerica/src/main/resources/templates/reports/userslist.html
@@ -20,9 +20,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <script>
+      var getUrl = window.location;
+      var baseUrl = getUrl.protocol + "//" + getUrl.host + "/";
       var users = $.ajax({
         type: "GET",
-        url: "http://localhost:8080/users/list",
+        url: baseUrl+"users/list",
         success: function (data) {
           $.each(data, function (i, item) {
             lista = document.getElementById("myTable");
